fix z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -5571,7 +5571,7 @@ a:hover {
   background: url("../images/home-hero-info.png") no-repeat top right;
   height: 111px;
   width: 100%;
-  z-index: 9999; }
+  z-index: 9995; }
 
 #superfish-4 {
   margin-bottom: 0; }
